tests/error/postfix_no_match.gw
#! [contains] no match found for operator
Object o;
o++;
